--- a/src/app/builder/build-home/build-home.component.html
+++ b/src/app/builder/build-home/build-home.component.html
@@ -1,3 +1,11 @@
-<p>
-  build-home works!
-</p>
+<div fxLayout="row wrap">
+  <div fxFlex="100%">
+    <app-url-input></app-url-input>
+  </div>
+  <div fxFlex="100%">
+    <p>Headers</p>
+  </div>
+  <div fxFlex="100%">
+    <p>Results</p>
+  </div>
+</div>
