--- a/src/app/builder/map-group/map-group.component.html
+++ b/src/app/builder/map-group/map-group.component.html
@@ -1,6 +1,7 @@
-<div *ngFor="let p of mapGroupFormArray" fxLayout="col" >
-    <div [formGroup]="p" fxLayout="row" fxLayoutAlign="space-between start">
+<div *ngFor="let p of mapGroupFormArray; let i = index" fxLayout="col" >
+  <div [formGroup]="p" fxLayout="row" fxLayoutAlign="space-between start" fxLayoutGap="10px">
     <div fxFlex="30%"><mat-form-field><input matInput placeholder="Name"  formControlName="name" ></mat-form-field></div>
-      <div fxFlex="30%"><mat-form-field><input matInput placeholder="Value" formControlName="value" fxFlex="70%"></mat-form-field></div>
+    <div fxFlex="30%"><mat-form-field><input matInput placeholder="Value" formControlName="value" fxFlex="70%"></mat-form-field></div>
+    <button mat-icon-button color="primary" type="button" color="primary" (click)="remove(i)" ><mat-icon>remove_circle</mat-icon></button>
   </div>
 </div>
