--- a/src/app/builder/i-options/i-options.component.html
+++ b/src/app/builder/i-options/i-options.component.html
@@ -1,3 +1,4 @@
+<mat-card class="i-opts">
 <form [formGroup]="interfaceOptions" (ngSubmit)="setOptions()">
     <mat-form-field>
         <input matInput placeholder="Interface Prefix" formControlName="prefix">
@@ -5,6 +6,7 @@
   <mat-form-field>
         <input matInput placeholder="Interface Name" formControlName="mainInt">
     </mat-form-field>
-  <p *ngIf="interfaceOptions.value">e.g. main interface will be external interface {{interfaceOptions.value.prefix+interfaceOptions.value.mainInt}} {{'{..}'}}</p>
-  <button mat-button color="primary" type="submit" >Generate Interface</button>
+    <button mat-button color="primary" type="submit" >Generate Interface</button>
+    <p *ngIf="interfaceOptions.value">e.g. interface will look like:</p><pre>export interface {{interfaceOptions.value.prefix+interfaceOptions.value.mainInt}} {{'{..}'}}</pre>
 </form>
+</mat-card>
