Add copy to clipboard for interface output

--- a/src/app/builder/build-home/build-home.component.html
+++ b/src/app/builder/build-home/build-home.component.html
@@ -21,7 +21,7 @@
         </mat-card-actions>
       </mat-card>
       <div *ngIf="tsInterface" fxFlex="40">
-          <app-iout-card [iface]="tsInterface"></app-iout-card>
+          <app-iout-card [iface]="tsInterface" [httpcall]="httpCall"></app-iout-card>
         
       </div>
   </div>
