Add Header panel to response view

--- a/src/app/builder/build-home/build-home.component.html
+++ b/src/app/builder/build-home/build-home.component.html
@@ -14,6 +14,7 @@
           </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
+            <app-header-view [headers]="fullResponse.headers"></app-header-view>
             <app-resp-view  [jsonresp]="results"></app-resp-view>
         </mat-card-content>
         <mat-card-actions>
