Add demo gif on home page.  Add tooltip.
Also fixed unsubscribe on undefined in build-home.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,7 @@
     <router-outlet></router-outlet>
   </div>
   <div fxFlex="100">
-    <p>footer</p>
+    <p>&copy; <a href="https://toddwseattle.com">Todd Warren</a> 2018 see <a href="https://github.com/toddwseattle/rest-area">the respository</a> for license information</p>
   </div>
 </div>
-
 </div>
