--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <p>
   The REST Area let's you experiment with https REST apis to see the results, and
-  help automatically generate Typescript Interfaces select BUILD from the menu to get started.
-</p>
+  help automatically generate Typescript Interfaces</p>
+<p> select <b>BUILD</b> from the toolbar to get started.</p>
+<img src="/assets/images/RESTarea_demo.gif" alt="">
