--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <p>
   The REST Area lets you experiment with https REST apis to see the results, and
-  help automatically generate Typescript Interfaces</p>
+  help automatically generate Typescript Interfaces.  Today, it supports GET and POST methods.</p>
 <p> select <b>BUILD</b> from the toolbar to get started.</p>
 <img src="/assets/images/RESTarea_demo.gif" alt="">
