Add basic google analytics.  Change home page
Insturmented submitting the URL so we can learn more about how people use in
addition to pageviews.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,14 @@
 <p>
   The REST Area lets you experiment with https REST apis to see the results, and
-  help automatically generate Typescript Interfaces.  Today, it supports GET and POST methods.</p>
-<p> select <b>BUILD</b> from the toolbar to get started.</p>
-<img src="/assets/images/RESTarea_demo.gif" alt="">
+  help automatically generate Typescript Interfaces. Today, it supports GET and POST methods.</p>
+  <p> select <b>BUILD</b> from the toolbar to get started.  then:</p>
+  <ul>
+    <li>Select GET or POST for the method</li>
+    <li>Enter the URL</li>
+    <li>Add Parameter or Header name value pairs</li>
+    <li>Submit the request</li>
+    <li>Name the Interface and select an Interface prefix for any subtypes</li>
+    <li>Press Generate Interface</li>
+    <li>Use the copy button to copy the results to your sourcefile.</li>
+  </ul>
+<img src="/assets/images/RESTAreaGetIntro020818.gif" alt="rest area demo gif">
