--- a/src/app/builder/iout-card/iout-card.component.html
+++ b/src/app/builder/iout-card/iout-card.component.html
@@ -1,7 +1,10 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>
-      Interface Definition <button mat-button-icon color="primary" ngxClipboard [cbContent]="iface.fullclipout(httpcall)" matTooltip="copy interface" (cbOnSuccess)="isCopied = true" [class.cpy-success]= "isCopied"><mat-icon>content_copy</mat-icon></button>
+      Interface Definition
+      <button mat-button-icon color="primary" ngxClipboard [cbContent]="iface.fullclipout(httpcall)" matTooltip="copy interface" (cbOnSuccess)="isCopied = true" [class.cpy-success]= "isCopied" (click)="copyClick()">
+        <mat-icon>content_copy</mat-icon>
+      </button>
     </mat-card-title>
     <mat-card-subtitle>
       
